--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "LSGO团队图像处理demo",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "gulp": "gulp"
   },
   "repository": {
     "type": "git",
