--- a/package.json
+++ b/package.json
@@ -21,11 +21,19 @@
   },
   "homepage": "https://github.com/zp1996/LsgoImage#readme",
   "devDependencies": {
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-runtime": "^6.11.6",
+    "browser-sync": "^2.17.1",
     "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
     "gulp-jade": "^1.1.0",
+    "gulp-clean-css": "^2.0.12",
+    "gulp-concat": "^2.6.0",
+    "gulp-imagemin": "^3.0.3",
     "gulp-jshint": "^2.0.1",
     "gulp-less": "^3.1.0",
     "gulp-uglify": "^2.0.0",
-    "jshint": "^2.9.2"
+    "jshint": "^2.9.3"
   }
 }
